syntax = "proto3";

package duality.cwhooks;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "duality/cwhooks/params.proto";
import "duality/cwhooks/hook.proto";

option go_package = "github.com/duality-labs/duality/x/cwhooks/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/duality-labs/duality/cwhooks/params";
  
  }
  
  // Queries a list of Hook items.
  rpc Hook    (QueryGetHookRequest) returns (QueryGetHookResponse) {
    option (google.api.http).get = "/duality-labs/duality/cwhooks/hook/{id}";
  
  }
  rpc HookAll (QueryAllHookRequest) returns (QueryAllHookResponse) {
    option (google.api.http).get = "/duality-labs/duality/cwhooks/hook";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetHookRequest {
  uint64 id = 1;
}

message QueryGetHookResponse {
  Hook Hook = 1 [(gogoproto.nullable) = false];
}

message QueryAllHookRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllHookResponse {
  repeated Hook                                   Hook       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

